#151: Added GraphQL object and queries for Selector Types