@@ -17,13 +17,18 @@
 package com.echothree.control.user.selector.server.command;
 
 import com.echothree.control.user.selector.common.form.GetSelectorTypeForm;
+import com.echothree.control.user.selector.common.result.SelectorResultFactory;
+import com.echothree.control.user.selector.common.form.GetSelectorTypeForm;
 import com.echothree.control.user.selector.common.result.GetSelectorTypeResult;
 import com.echothree.control.user.selector.common.result.SelectorResultFactory;
 import com.echothree.model.control.core.common.EventTypes;
+import com.echothree.model.control.selector.server.control.SelectorControl;
+import com.echothree.model.control.selector.server.logic.SelectorTypeLogic;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
 import com.echothree.model.control.selector.server.control.SelectorControl;
+import com.echothree.model.data.selector.server.entity.SelectorType;
 import com.echothree.model.data.selector.server.entity.SelectorKind;
 import com.echothree.model.data.selector.server.entity.SelectorType;
 import com.echothree.model.data.user.common.pk.UserVisitPK;
@@ -32,6 +37,7 @@ import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
 import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BaseSingleEntityCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
@@ -41,53 +47,55 @@ import java.util.Collections;
 import java.util.List;
 
 public class GetSelectorTypeCommand
-        extends BaseSimpleCommand<GetSelectorTypeForm> {
-    
+        extends BaseSingleEntityCommand<SelectorType, GetSelectorTypeForm> {
+
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
-    
-    static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
-                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
-                    new SecurityRoleDefinition(SecurityRoleGroups.SelectorType.name(), SecurityRoles.Review.name())
-                    )))
-                )));
 
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("SelectorKindName", FieldType.ENTITY_NAME, true, null, null),
-                new FieldDefinition("SelectorTypeName", FieldType.ENTITY_NAME, true, null, null)
-                ));
+    static {
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
+                new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
+                        new SecurityRoleDefinition(SecurityRoleGroups.SelectorType.name(), SecurityRoles.Review.name())
+                ))
+        ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("SelectorKindName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("SelectorTypeName", FieldType.ENTITY_NAME, false, null, null),
+                new FieldDefinition("EntityRef", FieldType.ENTITY_REF, false, null, null),
+                new FieldDefinition("Key", FieldType.KEY, false, null, null),
+                new FieldDefinition("Guid", FieldType.GUID, false, null, null),
+                new FieldDefinition("Ulid", FieldType.ULID, false, null, null)
+        );
     }
-    
+
     /** Creates a new instance of GetSelectorTypeCommand */
     public GetSelectorTypeCommand(UserVisitPK userVisitPK, GetSelectorTypeForm form) {
         super(userVisitPK, form, COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
-    
+
     @Override
-    protected BaseResult execute() {
-        var selectorControl = Session.getModelController(SelectorControl.class);
-        GetSelectorTypeResult result = SelectorResultFactory.getGetSelectorTypeResult();
-        String selectorKindName = form.getSelectorKindName();
-        SelectorKind selectorKind = selectorControl.getSelectorKindByName(selectorKindName);
-        
-        if(selectorKind != null) {
-            String selectorTypeName = form.getSelectorTypeName();
-            SelectorType selectorType = selectorControl.getSelectorTypeByName(selectorKind, selectorTypeName);
-            
-            if(selectorType != null) {
-                result.setSelectorType(selectorControl.getSelectorTypeTransfer(getUserVisit(), selectorType));
-                
-                sendEventUsingNames(selectorType.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
-            } else {
-                addExecutionError(ExecutionErrors.UnknownSelectorTypeName.name(), selectorKindName, selectorTypeName);
-            }
-        } else {
-            addExecutionError(ExecutionErrors.UnknownSelectorKindName.name(), selectorKindName);
+    protected SelectorType getEntity() {
+        var selectorType = SelectorTypeLogic.getInstance().getSelectorTypeByUniversalSpec(this, form, true);
+
+        if(selectorType != null) {
+            sendEventUsingNames(selectorType.getPrimaryKey(), EventTypes.READ.name(), null, null, getPartyPK());
         }
-        
+
+        return selectorType;
+    }
+
+    @Override
+    protected BaseResult getTransfer(SelectorType selectorType) {
+        var selectorControl = Session.getModelController(SelectorControl.class);
+        var result = SelectorResultFactory.getGetSelectorTypeResult();
+
+        if(selectorType != null) {
+            result.setSelectorType(selectorControl.getSelectorTypeTransfer(getUserVisit(), selectorType));
+        }
+
         return result;
     }
-    
+
 }
